# ai-research-paper-to-notebook

./: .env.example  .gitignore  AGENTS.md  README.md  download_gemma4.py  dvc.yaml  params.yaml  pyproject.toml  start-llama-server.txt
documents/: CODEBASE_PREFS.md  DESIGN_DOC.md  IMPLEMENTATION_PLAN.md
documents/logs/04-08-2026/detail/: detail-phase-9-validation-and-repair.md
documents/logs/04-08-2026/plan/: plan-phase-9-validation-and-repair.md
documents/logs/04-08-2026/research/: research-phase-9-validation-and-repair.md
documents/logs/04-08-2026/structure/: structure-phase-9-validation-and-repair.md
documents/logs/04-20-2026/research/: research-current-codebase-status.md
examples/: sample_learner_profile.json  sample_params.yaml  saveliev_2025_first_time_reader_profile.json
prompts/: 1_research_prompt.md  2_plan_prompt.md  3_structure_prompt.md  4_detail_prompt.md  kickstart.md
src/: __init__.py  artifact_store.py  cell_generator.py  chunking.py  concept_graph.py  config.py  learner_profile.py  main.py  notebook_builder.py  parse_pdf.py  planner.py  repair.py  retrieve.py  schemas.py  validators.py
src/models/: __init__.py  gemma_4_e2b.py
tests/: test_artifact_store.py  test_cell_generator.py  test_chunking.py  test_cli.py  test_concept_graph.py  test_config.py  test_learner_profile.py  test_notebook_builder.py  test_parse_pdf.py  test_planner.py  test_reference_pipeline.py  test_run_command.py  test_schemas.py  test_validators.py
tmp/: llama_raw_content.txt  llama_raw_response.json
(+1 files in other folders)
