[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "paper-to-notebook"
version = "0.1.0"
description = "Pedagogy-first paper-to-notebook pipeline."
readme = "documents/DESIGN_DOC.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "httpx>=0.27",
  "PyYAML>=6.0.2",
  "nbformat>=5.10",
  "nbclient>=0.10",
  "pymupdf4llm>=0.0.20",
  "rank-bm25>=0.2.2",
  "numpy>=1.26",
  "ipywidgets>=8.1",
  "matplotlib>=3.8",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "dvc>=3.50",
]

[project.scripts]
paper2nb = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

